chore: 更新 tsconfig 設定，移除不必要的排除規則並調整測試配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,14 +35,6 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "src/**/*.{spec,test}.ts*",
-    "src/**/*.spec.ts*",
-    "src/**/*.test.ts*"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.test.json"
-    }
+    "node_modules"
   ]
 }
