--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest --project bdd",
-    "agent:test": "vitest --project bdd --run"
+    "agent:test": "vitest --project bdd --run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "next": "15.5.4",
