--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "vitest.nodeExecutable": "/Users/takosu/.nvm/versions/node/v22.13.1/bin/node"
+  "vitest.nodeExecutable": "/Users/takosu/.nvm/versions/node/v22.13.1/bin/node",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  }
 }
