chore: 更新 VSCode 設定，新增 Cucumber 特性與規則

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true
-  }
+  },
+  "cucumber.features": [
+    "src/**/*.feature",
+  ],
+  "cucumber.glue": [
+    "src/**/feature/**/*.spec.tsx",
+  ]
 }
